# Makefile

01/: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  hello  hello.c
01/autom4te.cache/: output.2  output.3  requests  traces.2  traces.3  traces.4
02/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
02/autom4te.cache/: output.1  requests  traces.0  traces.1
02/src/: Makefile  Makefile.am  Makefile.in  hello  test.c
02/src/.deps/: test.Po
03/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
03/autom4te.cache/: output.1  requests  traces.0  traces.1
03/include/: print.h
03/lib/: Makefile  Makefile.am  Makefile.in  print.c
03/lib/.deps/: print.Po
03/src/: Makefile  Makefile.am  Makefile.in  hello  test.c
03/src/.deps/: test.Po
04/: Makefile  Makefile.in  README  config.h  config.h.in~  config.status  configure  configure.scan
04/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2  traces.3
04/src/ModuleA/apple/core/: Makefile  Makefile.in  test
04/src/ModuleA/apple/core/.deps/: test.Po
04/src/ModuleA/apple/shell/: Makefile  Makefile.am  Makefile.in
04/src/ModuleA/apple/shell/.deps/: apple.Po
04/src/lib/: Makefile  Makefile.in
04/src/lib/.deps/: swap.Po
05/: README
